--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5",
+    "react-scripts": "^2.1.5",
     "typescript": "^3.3.3333",
     "vis": "^4.21.0"
   },
