--- a/package.json
+++ b/package.json
@@ -1,13 +1,27 @@
 {
-  "name": "react-kraken-dashboard",
-  "version": "0.1.0",
+  "name": "kraken-dashboard",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-pack": "electron-builder -c.extraMetadata.main=build/electron.js",
+    "preelectron-pack": "yarn build"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hpc/kraken-dashboard.git"
+  },
+  "author": "Kevin Pelzel",
+  "license": "BSD-3-Clause",
+  "bugs": {
+    "url": "https://github.com/hpc/kraken-dashboard/issues"
+  },
+  "homepage": "./",
+
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -32,9 +46,25 @@
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "typescript": "3.6.4"
+    "typescript": "3.6.4",
+    "vis-network": "^6.1.1",
+    "electron-is-dev": "^1.0.1"
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.0"
+    "@types/react-router-dom": "^5.1.0",
+    "concurrently": "^4.1.2",
+    "electron": "^6.0.4",
+    "electron-builder": "^21.2.0",
+    "wait-on": "^3.2.0"
+  },
+  "build": {
+    "appId": "com.example.kraken-dashboard",
+    "files": [
+      "build/**/*",
+      "node_modules/**/*"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
   }
 }
