--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "url": "https://github.com/hpc/kraken-dashboard/issues"
   },
   "homepage": "./",
-
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -39,20 +38,20 @@
   },
   "dependencies": {
     "@types/jest": "24.0.19",
-    "@types/node": "12.11.0",
-    "@types/react": "16.9.7",
+    "@types/node": "12.11.1",
+    "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
+    "electron-is-dev": "^1.0.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "typescript": "3.6.4",
-    "vis-network": "^6.1.1",
-    "electron-is-dev": "^1.0.1"
+    "vis-network": "^6.1.1"
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.0",
-    "concurrently": "^4.1.2",
+    "concurrently": "^5.0.0",
     "electron": "^6.0.4",
     "electron-builder": "^21.2.0",
     "wait-on": "^3.2.0"
