--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "kraken-dashboard",
-  "version": "1.0.0",
-  "description": "Dashboard for Kraken",
-  "main": "public/electron.js",
+  "version": "1.1.0",
+  "private": true,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -22,28 +21,39 @@
     "url": "https://github.com/hpc/kraken-dashboard/issues"
   },
   "homepage": "./",
-  "dependencies": {
-    "electron-is-dev": "^1.0.1",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.5",
-    "typescript": "^3.3.3333",
-    "vis": "^4.21.0"
-  },
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "dependencies": {
+    "@types/jest": "24.0.19",
+    "@types/node": "12.11.1",
+    "@types/react": "16.9.9",
+    "@types/react-dom": "16.9.2",
+    "electron-is-dev": "^1.0.1",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "typescript": "3.6.4",
+    "vis-network": "^6.1.1"
+  },
   "devDependencies": {
-    "concurrently": "^4.1.0",
-    "electron": "^4.0.6",
-    "electron-builder": "^20.38.5",
+    "@types/react-router-dom": "^5.1.0",
+    "concurrently": "^5.0.0",
+    "electron": "^6.0.4",
+    "electron-builder": "^21.2.0",
     "wait-on": "^3.2.0"
   },
   "build": {
