--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
   },
   "dependencies": {
     "@types/jest": "24.0.19",
+    "@types/lodash": "^4.14.144",
     "@types/node": "12.11.1",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
     "electron-is-dev": "^1.0.1",
+    "lodash": "^4.17.15",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
@@ -65,6 +67,6 @@
     "directories": {
       "buildResources": "assets"
     },
-    "icon":"build/icons/android-chrome-512x512.png"
+    "icon": "build/icons/android-chrome-512x512.png"
   }
 }
