--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "electron-is-dev": "^1.0.1",
     "lodash": "^4.17.15",
     "react": "^16.10.2",
+    "react-color": "^2.17.3",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
@@ -54,6 +55,7 @@
     "vis-network": "^6.1.1"
   },
   "devDependencies": {
+    "@types/react-color": "^3.0.1",
     "@types/react-router-dom": "^5.1.0",
     "concurrently": "^5.0.0",
     "electron": "^6.0.4",
