--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
     "@types/node": "12.11.1",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
+    "@types/react-tabs": "^2.3.1",
     "electron-is-dev": "^1.0.1",
     "lodash": "^4.17.15",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-tabs": "^3.0.0",
     "typescript": "3.6.4",
     "vis-network": "^6.1.1"
   },
