--- a/package.json
+++ b/package.json
@@ -37,32 +37,33 @@
     ]
   },
   "dependencies": {
-    "electron-is-dev": "^1.0.1",
-    "lodash": "^4.17.15",
-    "react": "^16.10.2",
-    "react-color": "^2.17.3",
-    "react-dom": "^16.10.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.3",
-    "react-tabs": "^3.0.0",
-    "react-virtualized-auto-sizer": "^1.0.2",
-    "typescript": "3.7.3",
-    "vis-network": "^6.1.1"
+    "electron-is-dev": "^1.2.0",
+    "lodash": "^4.17.20",
+    "react": "^17.0.1",
+    "react-color": "^2.19.3",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.1",
+    "react-tabs": "^3.1.2",
+    "react-virtualized-auto-sizer": "^1.0.4",
+    "typescript": "^4.1.3",
+    "vis-data": "^7.1.2",
+    "vis-network": "^9.0.0"
   },
   "devDependencies": {
-    "@types/jest": "24.0.23",
-    "@types/lodash": "^4.14.144",
-    "@types/node": "12.12.16",
-    "@types/react": "16.9.16",
-    "@types/react-color": "^3.0.1",
-    "@types/react-dom": "16.9.4",
-    "@types/react-router-dom": "^5.1.0",
-    "@types/react-tabs": "^2.3.1",
+    "@types/jest": "^26.0.20",
+    "@types/lodash": "^4.14.168",
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
+    "@types/react-color": "^3.0.4",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-tabs": "^2.3.2",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
-    "concurrently": "^5.0.1",
-    "electron": "^7.1.4",
-    "electron-builder": "^21.2.0",
-    "wait-on": "^3.2.0"
+    "concurrently": "^5.3.0",
+    "electron": "^11.2.1",
+    "electron-builder": "^22.9.1",
+    "wait-on": "^5.2.1"
   },
   "build": {
     "appId": "com.example.kraken-dashboard",
