--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
     "react-scripts": "^4.0.1",
     "react-tabs": "^3.1.2",
     "react-virtualized-auto-sizer": "^1.0.4",
+    "rxjs": "^7.0.0",
     "typescript": "^4.1.3",
     "vis-data": "^7.1.2",
-    "vis-network": "^9.0.0"
+    "vis-network": "^9.0.0",
+    "worker-loader": "^3.0.8"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
