--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "electron-is-dev": "^1.2.0",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
@@ -46,9 +46,11 @@
     "react-scripts": "^4.0.1",
     "react-tabs": "^3.1.2",
     "react-virtualized-auto-sizer": "^1.0.4",
+    "rxjs": "^7.0.0",
     "typescript": "^4.1.3",
     "vis-data": "^7.1.2",
-    "vis-network": "^9.0.0"
+    "vis-network": "^9.0.4",
+    "worker-loader": "^3.0.8"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
